# radengan-exper-game5

./: CMakeLists.txt  README-en.md  README.md
android-project/: settings.gradle.kts
android-project/app/: build.gradle.kts
android-project/app/src/androidTest/java/id/my/radengan/exper/game/: ExampleInstrumentedTest.kt
android-project/app/src/main/: AndroidManifest.xml  CMakeLists.txt
android-project/app/src/main/cpp/: app
android-project/app/src/main/java/id/my/radengan/exper/game5/: MainActivity.kt
android-project/app/src/main/res/values/: strings.xml  themes.xml
android-project/app/src/test/java/id/my/radengan/exper/game/: ExampleUnitTest.kt
android-project/gradle/: libs.versions.toml
android-project/gradle/wrapper/: gradle-wrapper.properties
app/: CMakeLists.txt
app/assets/anims/: dino_spritesheet.json
app/src/: app_shell.html  arena.h  dino.c  game.h  macros.h  main.c  state.h
